--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
   <main>
     <div class="container">
-      <img src="images/image-qr-code.png" alt="qr-code" id="qrImg">
-      <h2>Improve your front-end skills by building projects</h2>
+      <img src="images/image-qr-code.png" alt="qr code to frontendmentor.io" id="qrImg">
+      <h1>Improve your front-end skills by building projects</h1>
       <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </div>
   
